Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116571

Qt Quick render loop crashes when losing the graphics device

    XMLWordPrintable

Details

    • 4798a9c14 (dev), 0ca0863e5 (6.6)

    Description

      Both render loops try to query the GPU time from the swapchain's command buffer after calling endFrame(), but if endFrame() failed with FrameOpDeviceLost then this is fatal.

      Attachments

        For Gerrit Dashboard: QTBUG-116571
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes