Prevent crashing in the render loops upon device lost

Accessing cd->swapchain is pretty bad when endFrame() returned
FrameOpDeviceLost because all rhi stuff is released. Make sure
we hit the timing collection call only when endFrame() succeeded.

Fixes: QTBUG-116571
Change-Id: Iff1b67d009fcaeacd0c3034071adec5c4ce706bb
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
(cherry picked from commit 4798a9c14c316d2fe1c3048a32586abb6316fee4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>