src/quick/scenegraph/qsgthreadedrenderloop.cpp
@@ -748,8 +748,9 @@ void QSGRenderThread::syncAndRender()
                 qWarning("Failed to end frame");
             if (frameResult == QRhi::FrameOpDeviceLost || frameResult == QRhi::FrameOpSwapChainOutOfDate)
                 QCoreApplication::postEvent(window, new QEvent(QEvent::Type(QQuickWindowPrivate::FullUpdateRequest)));
+        } else {
+            lastCompletedGpuTime = cd->swapchain->currentFrameCommandBuffer()->lastCompletedGpuTime();
         }
-        lastCompletedGpuTime = cd->swapchain->currentFrameCommandBuffer()->lastCompletedGpuTime();
         d->fireFrameSwapped();
     } else {
         Q_TRACE(QSG_render_exit);
